@@ -13,6 +13,7 @@ Version 6.7.2 - not yet released
   - fix saving of custom polars (#3173)
 * waypoints
   - correctly handle S latitudes and W longitudes in waypoint editor (#3155)
+  - fix saving waypoints to cup format files from waypoint editor
 * Android
   - enable Vivante workaround for GC600 (#3184)
 * Kobo
